# st-mems-android-linux-sensors-hal

./: CONTRIBUTING.md  OWNERS  readme.org
2.0/: AdditionalInfoManager.cpp  AdditionalInfoManager.h  Android.bp  Console.cpp  Convert.cpp  Convert.h  DirectChannel.h  IConsole.cpp  IUtils.cpp  SensorPlacement.cpp  SensorPlacement.h  Sensors.cpp  Sensors.h  SensorsCallback.cpp  SensorsCallback.h  SensorsHidlInterface.cpp  SensorsHidlInterface.h  Utils.cpp  android.hardware.sensors@2.0-service-stmicroelectronics.rc  readme.org  service.cpp
aidl/: AdditionalInfoManager.cpp  AdditionalInfoManager.h  Android.bp  Convert.cpp  Convert.h  DirectChannel.cpp  DirectChannel.h  SensorsAidlInterface.cpp  SensorsAidlInterface.h  SensorsCallback.cpp  SensorsCallback.h  android.hardware.sensors@aidl-service-stmicroelectronics.rc  android.hardware.sensors@aidl-stmicroelectronics.xml  readme.org  service.cpp
aidl/commons/: AndroidPropertiesLoader.h  IConsole.cpp
commons/: Android.bp  AndroidPropertiesLoader.cpp  AndroidPropertiesLoader.h  IConsole.cpp  SensorPlacement.cpp  SensorPlacement.h  SensorsDataProxyManager.cpp  SensorsDataProxyManager.h
core/: Accelerometer.cpp  Accelerometer.h  AccelerometerLimitedAxes.cpp  AccelerometerLimitedAxes.h  Android.bp  Android.mk  CMakeLists.txt  ChangeODRTimestampStack.cpp  ChangeODRTimestampStack.h  CircularBuffer.cpp  CircularBuffer.h  DeviceOrientation.cpp  DeviceOrientation.h  FlushBufferStack.cpp  FlushBufferStack.h  FlushRequested.cpp  FlushRequested.h  Gesture.cpp  Gesture.h  Gyroscope.cpp  Gyroscope.h  GyroscopeLimitedAxes.cpp  GyroscopeLimitedAxes.h  HWSensorBase.cpp  HWSensorBase.h  ISTMSensorsCallbackData.cpp  ISTMSensorsHAL.cpp  IntTemp.cpp  IntTemp.h  Magnetometer.cpp  Magnetometer.h  Pressure.cpp  Pressure.h  PropertiesManager.cpp  PropertiesParser.cpp  PropertiesParser.h  RHumidity.cpp  RHumidity.h  STMSensor.cpp  STMSensorType.cpp  (+68 more)
core/gTests/: CMakeLists.txt  Main_TestAll.cpp  STMSensor_test.cpp  STMSensorsHAL_test.cpp  STMSensorsList_test.cpp
core/include/: Android.bp  IConsole.h  ISTMSensorsCallback.h  ISTMSensorsCallbackData.h  ISTMSensorsHAL.h  IUtils.h  Matrix.h  PropertiesManager.h  STMSensor.h  STMSensorType.h  STMSensorsList.h  SensorType.h  Utils.h
core/include/local/: sensorhal_iio_types.h  stm_iio_types.h
core/libs/: Matrix.h
core/libs/accel-calibration/: Android.bp  Android.mk  CMakeLists.txt  STMAccelCalibration.cpp  STMAccelCalibration.h
core/libs/geomag-fusion/: Android.bp  Android.mk  CMakeLists.txt  STMGeomagFusion.cpp  STMGeomagFusion.h
core/libs/gyro-calibration/: Android.bp  Android.mk  CMakeLists.txt  STMGyroCalibration.cpp  STMGyroCalibration.h
core/libs/gyro-temperature-calibration/: Android.bp  Android.mk  CMakeLists.txt  STMGyroTempCalibration.cpp  STMGyroTempCalibration.h
core/libs/magn-calibration/: Android.bp  Android.mk  CMakeLists.txt  STMMagnCalibration.cpp  STMMagnCalibration.h
core/libs/sensors-fusion/: Android.bp  Android.mk  CMakeLists.txt  STMSensorsFusion.cpp  STMSensorsFusion.h  STMSensorsFusion6Axis.cpp  STMSensorsFusion6Axis.h  STMSensorsFusion9Axis.cpp  STMSensorsFusion9Axis.h
core/libs/timesync/: Android.bp  Android.mk  CMakeLists.txt  STMTimesync.cpp  STMTimesync.h
legacy/: Android.mk  Console.cpp  Console.h  Convert.cpp  Convert.h  IConsole.cpp  IUtils.cpp  SensorsLegacyInterface.cpp  SensorsLegacyInterface.h  SensorsModule.cpp  Utils.h  androidVersion.h  halVersion.h  readme.org
linux/: CMakeLists.txt  Console.cpp  IConsole.cpp  IUtils.cpp  LinuxPropertiesLoader.cpp  LinuxPropertiesLoader.h  SensorsLinuxInterface.cpp  SensorsLinuxInterface.h  Utils.cpp  main.cpp  readme.org
linux/cmake/: toolchain-arm32.cmake  toolchain-arm64.cmake
multi-hal/: AdditionalInfoManager.cpp  AdditionalInfoManager.h  Android.bp  Convert.cpp  Convert.h  DirectChannel.cpp  DirectChannel.h  HalProxyCallbackWrapper.h  IConsole.cpp  IUtils.cpp  SensorsSubHal.cpp  SensorsSubHal.h  readme.org
